# HDRVisualizer

./: .gitignore  3DViewer.cpp  3DViewer.h  CMakeLists.txt  Colormap.cpp  Colormap.h  Colorspace.cpp  Colorspace.h  Controls.cpp  Controls.h  Events.cpp  Events.h  KeyboardControls.cpp  KeyboardControls.h  LoadLogo.cpp  LoadLogo.h  MouseControls.cpp  MouseControls.h  Polarized.cpp  Polarized.h  README.md  Tonemapper.cpp  Tonemapper.h  Utils.cpp  Utils.h  Video.cpp  Video.h  main.cpp  test.py
assets/: imgui.ini
imgs/: bunny.ply  image_half.raw  imgui.ini  normals.exr
